# fhe-regex

./: Cargo.toml  LICENSE  README.md  shell.nix  tutorial.md
src/: main.rs  regex.rs  shortint.rs  str.rs  str2.rs
src/regex/: ciphertext.rs  engine.rs  execution.rs  mod.rs  parser.rs  regex_parser.rs
src/trials/: bool.rs  integer.rs  mod.rs  shortint.rs  str.rs  str2.rs
test_data/: client_key
