[package]
name = "fhe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tfhe = { version = "0.1.11", features = ["boolean", "shortint", "x86_64-unix"] }
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", features = ["boolean", "integer", "shortint", "x86_64-unix"] }
combine = "*"
anyhow = "*"
nom = "*"
