[package]
name = "fhe-regex"
version = "0.1.0"
edition = "2021"

[dependencies]
tfhe = { git = "https://github.com/zama-ai/tfhe-rs.git", features = ["integer", "shortint", "x86_64-unix"] }
combine = "*"
anyhow = "*"
nom = "*"
env_logger = "*"
log = "*"

[dev-dependencies]
test-case = "*"
lazy_static = "*"
bincode = "1.3.3"

[features]
gen_test_keys = []
